--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="static/css/bootstrap-5.2.2.min.css">
+  <link rel="stylesheet" href="static/css/bootstrap.min.css">
 
   <!-- Public Sans font -->
   <link rel="stylesheet" href="static/css/fonts.css">
@@ -632,7 +632,7 @@
           navigator.clipboard.writeText(term.uri)
         },
         copy_uri_and_label_to_clipboard(term) {
-          languageCodes = {
+          var languageCodes = {
             'fi': 'fin',
             'sv': 'swe',
             'en': 'eng'
@@ -904,6 +904,6 @@
     </div>
   </footer>
 
-  <script src="static/js/bootstrap-5.2.2.min.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
 
 </body>
