--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="static/css/bootstrap-5.2.2.min.css">
+  <link rel="stylesheet" href="static/css/bootstrap.min.css">
 
   <!-- Public Sans font -->
   <link rel="stylesheet" href="static/css/fonts.css">
@@ -779,6 +779,6 @@
     </div>
   </footer>
 
-  <script src="static/js/bootstrap-5.2.2.min.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
 
 </body>
