--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -761,7 +761,7 @@
 
         <div class="col-md-3">
           <h4>Seuraa meitä</h4>
-          <span id="twitter"><a href="#">Twitterissä</span>
+          <span id="twitter"><a href="#">Twitterissä</a></span>
         </div>
 
       </div>
